# solar_geometry

./: AUTHORS  Makefile.am  README  autogen.sh  configure.ac  setup.py  solar_geometry.pc.in  solar_geometry.vcxproj
branches/bg/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  libtool  solar_geometry.pc  solar_geometry.pc.in  solargeo2.pc.in
branches/bg/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
branches/bg/src/: Makefile  Makefile.am  Makefile.in  solar_geometry.c  solar_geometry.h  solargeo2.c  solargeo2.h
branches/bg/src/.deps/: solar_geometry.Plo
python/: pysolar_geometry.cxx
src/: Makefile.am  angle.h  sg1_angle.h  solar_geometry.c  solar_geometry.cxx  solar_geometry.h
trunk/: README  solar_geometry.c  solar_geometry.h
