AC_INIT([solargeo2], [2.0.0])
AM_INIT_AUTOMAKE([-Wall -Werror])
AC_CONFIG_SRCDIR([src/solargeo2.c])

#INTI_REQUIRED_VERSION=1.0.7
#PKG_CHECK_MODULES(INTI, inti-1.0 >= $INTI_REQUIRED_VERSION)
#AC_SUBST(INTI_CFLAGS)
#AC_SUBST(INTI_LIBS)

AC_PROG_CC
AC_PROG_LIBTOOL

AC_CONFIG_FILES([
  Makefile
  src/Makefile
  solargeo2.pc
  ])
AC_OUTPUT
